<resources>
    <string name="app_name">Destiny Crucible Counter</string>
    <string name="reset_button_prompt">Reset</string>
    <string name="team_one_name">Alpha Team</string>
    <string name="team_two_name">Bravo Team</string>
    <string name="default_score">0</string>
    <string name="kill_label">Kill</string>
    <string name="neutralize_zone_label">Neutralize Zone</string>
    <string name="capture_zone_label">Capture Zone</string>
</resources>
